--- a/main.tex
+++ b/main.tex
@@ -12,12 +12,12 @@
 \colorlet{body}{LightGrey}
 
 \begin{document}
-\name{Ayoub GHRISS}
+\name{Fname Lname}
 %\tagline{Application : Machine Learning Engineer}
 \personalinfo{
-  \email{ayoub.ghriss@polytechnique.org}
-  \phone{+33(0)663-47-5341}
-  \linkedin{linkedin.com/in/ayoubghriss}
+  \email{fname.lname@polytechnique.org}
+  \phone{+33(0)000-00-000}
+  \linkedin{linkedin.com/in/user}
   \flag{FR, MA}
 }
 
