--- a/projects.tex
+++ b/projects.tex
@@ -1,21 +1,21 @@
 \cvsection{Projects}
 
 
-\cvproject{Variance Forwards Model and Volatility Derivatives}{Department of Applied Mathematics , Ecole Polytechnique}{Sept 2016- March 2017}{}
+\cvproject{Variance Forwards Model and Volatility Derivatives}{Department of Applied Mathematics , Ecole X}{Sept 2016- March 2017}{}
 \begin{itemize}
-\item Studying Bergomi and Rough Bergomi Models for volatility swaps.
+\item Studying X Model
 \end{itemize}
 
 \divider
 
-\cvproject{An inbound call forecasting system}{AXA Data Challenge, Data Science and Mining Team}{Sept 2016- December 2016}{}
+\cvproject{An X forecasting system}{Data Challenge, Data Science and Mining Team}{Sept 2016- December 2016}{}
 \begin{itemize}
-\item Predicting the number of incoming calls for the AXA call center in France, on a per half-hour time slot basis.
+\item Predicting the number of X .
 \end{itemize}
 
 \divider
 
-\cvproject{Optimization of EDF's technicians circuit in France}{EDF}{June 2015 - May 2016}
+\cvproject{Optimization of X in France}{EDF}{June 2015 - May 2016}
 \begin{itemize}
-\item Worked on developing a JAVA application. In charge of mathematical modelling and exploring open source solutions.
+\item Worked on developing X. In charge of X.
 \end{itemize}
