--- a/skills.tex
+++ b/skills.tex
@@ -5,29 +5,25 @@
 \cvtag{VBA}
 \cvtag{Java}
 \cvtag{PHP}
-\cvtag{Machine Learning}
-\cvtag{Algorithmics}
-\cvtag{Statistics}
-\cvtag{Image Editing}
 
 
 \begin{minipage}[t]{0.4\linewidth}
 \cvsection{Languages}
-\cvskill{Arabic}{Native}
+\cvskill{X}{Native}
 \medskip
-\cvskill{French}{Native}
+\cvskill{X}{Native}
 \medskip
-\cvskill{English}{Fluent}
+\cvskill{X}{Fluent}
 \medskip
-\cvskill{Japanese}{Elementary proficiency}
+\cvskill{X}{Elementary proficiency}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.55\linewidth}
 \cvsection{EXTRACURRICULARS}
-\cvachievement{\faClipboard}{X-MicroFinance Club}{Consulting for Safran cooperatives in Taliouine, Morocco}
+\cvachievement{\faClipboard}{Xe Club}{Consulting for X}
 \divider
 
-\cvachievement{\faUniversity}{X On the MUN Club}{Debating Club. Head Delegate, Bonn Model United Nations 2015}
+\cvachievement{\faUniversity}{X  Club}{Debating X}
 \end{minipage}
 
 
