--- a/work.tex
+++ b/work.tex
@@ -1,25 +1,20 @@
 \cvsection{Work Experience}
 
-\cvwork{Machine Learning Researcher, Internship}{April - September 2018}{RIKEN Center, Advanced Intelligence Project, Tokyo}
+\cvwork{X Researcher, Internship}{April - September 2018}{ Tokyo}
 \begin{itemize}
-\item Study and implementation of Supervised and Reinforcement Learning in high-dimensional and continuous framework.
+\item Study and implementation of X.
 \end{itemize}
 
 \divider
-\cvwork{Quantitative Research Intern}{April - August 2017}{Mazars, London}
+\cvwork{Quantitative X Intern}{April - August 2017}{ London}
 \begin{itemize}
-\item Implemented a Martingale Hypothesis Control on an Economic Scenario Generator using C++.
-\item Reviewed and implemented models of counter-parties probability of default for an IFRS9 tool.
+\item Implemented a X.
+\item Reviewed X.
 \end{itemize}
 
 \divider
 
-\cvwork{Market Data Analyst}{June - August 2016}{Société Générale, Paris}
+\cvwork{X Analyst}{June - August 2016}{Paris}
 \begin{itemize}
-\item Developed a VBA tool to control of Guaranteed Repos for Paris' trading team.
+\item Developed a VBA X
 \end{itemize}
-
-%\cvwork{Volunteer Intern}{Oct 2014 - April 2015}{ATD Fourth World, Noisy-Le-Grand}
-%\begin{itemize}
-%\item Animated workshops for 6 to 12-year-old children of Families Promotion Center.
-%\end{itemize}
