--- a/education.tex
+++ b/education.tex
@@ -1,28 +1,23 @@
 \cvsection{Education}
-\cvevent{ENS Cachan}{Master of Research \ Mathematics, Vision and Machine Learning (MVA)}{Cachan, France}{Oct 2017- Sept 2018}\par
+\cvevent{X Uni}{Master of Research \ X}{France}{Oct 2017- Sept 2018}\par
 
 \begin{itemize}
-\item Reinforcement Learning, Graphical Models, Statistical Learning
-\item Computer Vision, Speech Recognition, Audio Signal Processing
+\item X element, X subject.
+\item X, X, X.
 \end{itemize}
 \divider
 
-\cvevent{Ecole Polytechnique}{Applied Mathematics}{Palaiseau, France}{Sept 2014-Sept 2017}
+\cvevent{Ecole X}{Applied Mathematics}{France}{Sept 2014-Sept 2017}
 
 \begin{itemize}
-\item Polytechnicien Engineer Cycle with Major in Applied Mathematics and application in Finance.
-\item Stochastic Calculus for Finance, Simulation and Monte-Carlo methods, Advanced Machine Learning, Random Models for survival and ecology.
+\item X Cycle with Major in X.
+\item Stochastic X, Simulation and X, Advanced X, Random X.
 \end{itemize}
 
 \divider
 
-\cvevent{ENSAE ParisTech}{B.Sc.\ Economics and Applied Mathematics}{Malakoff, France}{Sept 2013-June 2014}
+\cvevent{X}{B.Sc.\ EconomiXs and Applied X}{France}{Sept 2013-June 2014}
 \begin{itemize}
-\item Data Analysis, Econometrics, Microeconomics, Macroeconomics
+\item X Analysis
 \end{itemize}
 
-%\divider
-%\cvevent{Lyc\'ee Lissane Eddine Ibn Alkhatib}{Two-year Preparatory %Program}{Laayoune, Morocco}{Sept 2011-June 2013}
-%\begin{itemize}
-%\item Intensive program in advanced Mathematics and Physics in preparation for the nationwide competitive examinations to the Moroccan and French Grandes Ecoles.
-%\end{itemize}
